[tool.poetry]
name = "papers-fetcher"
version = "0.1.0"
description = "CLI tool to fetch research papers from PubMed"
authors = [
    "nagabhavya <vakkapatlabhavya1112@gmail.com>"
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.28.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"
